--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/images/
     - assets/images/logo.png
+    - assets/images/rayeneben.png
+    - assets/images/blackman.png
     - assets/icons/
 
 
